nodejs/versioned_docs/version-1.15/api/class-request.mdx
---
id: class-request
title: "Request"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Whenever the page sends a request for a network resource the following sequence of events are emitted by [Page]:
* [page.on('request')](./api/class-page.mdx#page-event-request) emitted when the request is issued by the page.
* [page.on('response')](./api/class-page.mdx#page-event-response) emitted when/if the response status and headers are received for the request.
* [page.on('requestfinished')](./api/class-page.mdx#page-event-request-finished) emitted when the response body is downloaded and the request is complete.

If request fails at some point, then instead of `'requestfinished'` event (and possibly instead of 'response' event), the  [page.on('requestfailed')](./api/class-page.mdx#page-event-request-failed) event is emitted.

:::note
HTTP Error responses, such as 404 or 503, are still successful responses from HTTP standpoint, so request will complete with `'requestfinished'` event.
:::

If request gets a 'redirect' response, the request is successfully finished with the 'requestfinished' event, and a new request is  issued to a redirected url.


- [request.allHeaders()](./api/class-request.mdx#request-all-headers)
- [request.failure()](./api/class-request.mdx#request-failure)
- [request.frame()](./api/class-request.mdx#request-frame)
- [request.headers()](./api/class-request.mdx#request-headers)
- [request.headersArray()](./api/class-request.mdx#request-headers-array)
- [request.headerValue(name)](./api/class-request.mdx#request-header-value)
- [request.isNavigationRequest()](./api/class-request.mdx#request-is-navigation-request)
- [request.method()](./api/class-request.mdx#request-method)
- [request.postData()](./api/class-request.mdx#request-post-data)
- [request.postDataBuffer()](./api/class-request.mdx#request-post-data-buffer)
- [request.postDataJSON()](./api/class-request.mdx#request-post-data-json)
- [request.redirectedFrom()](./api/class-request.mdx#request-redirected-from)
- [request.redirectedTo()](./api/class-request.mdx#request-redirected-to)
- [request.resourceType()](./api/class-request.mdx#request-resource-type)
- [request.response()](./api/class-request.mdx#request-response)
- [request.sizes()](./api/class-request.mdx#request-sizes)
- [request.timing()](./api/class-request.mdx#request-timing)
- [request.url()](./api/class-request.mdx#request-url)

## request.allHeaders() {#request-all-headers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-all-headers-return"/> &#60;[Promise]<[Object]<[string], [string]>>&#62;<a href="#request-all-headers-return" class="list-anchor">#</a>

An object with all the request HTTP headers associated with this request. The header names are lower-cased.

## request.failure() {#request-failure}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-failure-return"/> &#60;[null]|[Object]&#62;<a href="#request-failure-return" class="list-anchor">#</a>
  - `errorText` &#60;[string]&#62; Human-readable error message, e.g. `'net::ERR_FAILED'`.

The method returns `null` unless this request has failed, as reported by `requestfailed` event.

Example of logging of all the failed requests:

```js
page.on('requestfailed', request => {
  console.log(request.url() + ' ' + request.failure().errorText);
});
```

## request.frame() {#request-frame}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-frame-return"/> &#60;[Frame]&#62;<a href="#request-frame-return" class="list-anchor">#</a>

Returns the [Frame] that initiated this request.

## request.headerValue(name) {#request-header-value}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-header-value-option-name"/> &#60;[string]&#62; Name of the header.<a href="#request-header-value-option-name" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-header-value-return"/> &#60;[Promise]<[null]|[string]>&#62;<a href="#request-header-value-return" class="list-anchor">#</a>

Returns the value of the header matching the name. The name is case insensitive.

## request.headers() {#request-headers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-headers-return"/> &#60;[Object]<[string], [string]>&#62;<a href="#request-headers-return" class="list-anchor">#</a>

**DEPRECATED** Incomplete list of headers as seen by the rendering engine. Use [request.allHeaders()](./api/class-request.mdx#request-all-headers) instead.

## request.headersArray() {#request-headers-array}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-headers-array-return"/> &#60;[Promise]<[Array]<[Object]>>&#62;<a href="#request-headers-array-return" class="list-anchor">#</a>
  - `name` &#60;[string]&#62; Name of the header.
  - `value` &#60;[string]&#62; Value of the header.

An array with all the request HTTP headers associated with this request. Unlike [request.allHeaders()](./api/class-request.mdx#request-all-headers), header names are NOT lower-cased. Headers with multiple entries, such as `Set-Cookie`, appear in the array multiple times.

## request.isNavigationRequest() {#request-is-navigation-request}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-is-navigation-request-return"/> &#60;[boolean]&#62;<a href="#request-is-navigation-request-return" class="list-anchor">#</a>

Whether this request is driving frame's navigation.

## request.method() {#request-method}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-method-return"/> &#60;[string]&#62;<a href="#request-method-return" class="list-anchor">#</a>

Request's method (GET, POST, etc.)

## request.postData() {#request-post-data}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-post-data-return"/> &#60;[null]|[string]&#62;<a href="#request-post-data-return" class="list-anchor">#</a>

Request's post body, if any.

## request.postDataBuffer() {#request-post-data-buffer}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-post-data-buffer-return"/> &#60;[null]|[Buffer]&#62;<a href="#request-post-data-buffer-return" class="list-anchor">#</a>

Request's post body in a binary form, if any.

## request.postDataJSON() {#request-post-data-json}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-post-data-json-return"/> &#60;[null]|[Serializable]&#62;<a href="#request-post-data-json-return" class="list-anchor">#</a>

Returns parsed request's body for `form-urlencoded` and JSON as a fallback if any.

When the response is `application/x-www-form-urlencoded` then a key/value object of the values will be returned. Otherwise it will be parsed as JSON.

## request.redirectedFrom() {#request-redirected-from}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-redirected-from-return"/> &#60;[null]|[Request]&#62;<a href="#request-redirected-from-return" class="list-anchor">#</a>

Request that was redirected by the server to this one, if any.

When the server responds with a redirect, Playwright creates a new [Request] object. The two requests are connected by `redirectedFrom()` and `redirectedTo()` methods. When multiple server redirects has happened, it is possible to construct the whole redirect chain by repeatedly calling `redirectedFrom()`.

For example, if the website `http://example.com` redirects to `https://example.com`:

```js
const response = await page.goto('http://example.com');
console.log(response.request().redirectedFrom().url()); // 'http://example.com'
```

If the website `https://google.com` has no redirects:

```js
const response = await page.goto('https://google.com');
console.log(response.request().redirectedFrom()); // null
```

## request.redirectedTo() {#request-redirected-to}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-redirected-to-return"/> &#60;[null]|[Request]&#62;<a href="#request-redirected-to-return" class="list-anchor">#</a>

New request issued by the browser if the server responded with redirect.

This method is the opposite of [request.redirectedFrom()](./api/class-request.mdx#request-redirected-from):

```js
console.log(request.redirectedFrom().redirectedTo() === request); // true
```

## request.resourceType() {#request-resource-type}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-resource-type-return"/> &#60;[string]&#62;<a href="#request-resource-type-return" class="list-anchor">#</a>

Contains the request's resource type as it was perceived by the rendering engine. ResourceType will be one of the following: `document`, `stylesheet`, `image`, `media`, `font`, `script`, `texttrack`, `xhr`, `fetch`, `eventsource`, `websocket`, `manifest`, `other`.

## request.response() {#request-response}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-response-return"/> &#60;[Promise]<[null]|[Response]>&#62;<a href="#request-response-return" class="list-anchor">#</a>

Returns the matching [Response] object, or `null` if the response was not received due to error.

## request.sizes() {#request-sizes}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-sizes-return"/> &#60;[Promise]<[Object]>&#62;<a href="#request-sizes-return" class="list-anchor">#</a>
  - `requestBodySize` &#60;[number]&#62; Size of the request body (POST data payload) in bytes. Set to 0 if there was no body.
  - `requestHeadersSize` &#60;[number]&#62; Total number of bytes from the start of the HTTP request message until (and including) the double CRLF before the body.
  - `responseBodySize` &#60;[number]&#62; Size of the received response body (encoded) in bytes.
  - `responseHeadersSize` &#60;[number]&#62; Total number of bytes from the start of the HTTP response message until (and including) the double CRLF before the body.

Returns resource size information for given request.

## request.timing() {#request-timing}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-timing-return"/> &#60;[Object]&#62;<a href="#request-timing-return" class="list-anchor">#</a>
  - `startTime` &#60;[number]&#62; Request start time in milliseconds elapsed since January 1, 1970 00:00:00 UTC
  - `domainLookupStart` &#60;[number]&#62; Time immediately before the browser starts the domain name lookup for the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `domainLookupEnd` &#60;[number]&#62; Time immediately after the browser starts the domain name lookup for the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `connectStart` &#60;[number]&#62; Time immediately before the user agent starts establishing the connection to the server to retrieve the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `secureConnectionStart` &#60;[number]&#62; Time immediately before the browser starts the handshake process to secure the current connection. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `connectEnd` &#60;[number]&#62; Time immediately before the user agent starts establishing the connection to the server to retrieve the resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `requestStart` &#60;[number]&#62; Time immediately before the browser starts requesting the resource from the server, cache, or local resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `responseStart` &#60;[number]&#62; Time immediately after the browser starts requesting the resource from the server, cache, or local resource. The value is given in milliseconds relative to `startTime`, -1 if not available.
  - `responseEnd` &#60;[number]&#62; Time immediately after the browser receives the last byte of the resource or immediately before the transport connection is closed, whichever comes first. The value is given in milliseconds relative to `startTime`, -1 if not available.

Returns resource timing information for given request. Most of the timing values become available upon the response, `responseEnd` becomes available when request finishes. Find more information at [Resource Timing API](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceResourceTiming).

```js
const [request] = await Promise.all([
  page.waitForEvent('requestfinished'),
  page.goto('http://example.com')
]);
console.log(request.timing());
```

## request.url() {#request-url}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="request-url-return"/> &#60;[string]&#62;<a href="#request-url-return" class="list-anchor">#</a>

URL of the request.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FetchRequest]: ./api/class-fetchrequest.mdx "FetchRequest"
[FetchResponse]: ./api/class-fetchresponse.mdx "FetchResponse"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
